{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 895,
  "lineage": "dfbe6317-7ef6-001e-fd3b-20faf98394d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:security-group/sg-08e9b6f2a3f658fe0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08e9b6f2a3f658fe0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20210203003315570200000008",
            "name_prefix": "all_worker_management",
            "owner_id": "096785701408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:security-group/sg-09b64f9d6af737e15",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09b64f9d6af737e15",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20210203003315568500000007",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "096785701408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:security-group/sg-0331647eae6196d1b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0331647eae6196d1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20210203003316411200000009",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "096785701408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:security-group/sg-08cda0051e0b2d63b",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-08cda0051e0b2d63b",
            "ingress": [],
            "name": "support-training-eks-vD95cRsC2021020300331671500000000b",
            "name_prefix": "support-training-eks-vD95cRsC",
            "owner_id": "096785701408",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "support-training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "support-training-eks-vD95cRsC-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:security-group/sg-0d763ccd30b2e9472",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0d763ccd30b2e9472",
            "ingress": [],
            "name": "support-training-eks-vD95cRsC2021020300331671290000000a",
            "name_prefix": "support-training-eks-vD95cRsC",
            "owner_id": "096785701408",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "support-training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "support-training-eks-vD95cRsC-eks_worker_sg",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3631770533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08cda0051e0b2d63b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3742316066",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08cda0051e0b2d63b",
            "self": false,
            "source_security_group_id": "sg-0d763ccd30b2e9472",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-300778642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d763ccd30b2e9472",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-4127728713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d763ccd30b2e9472",
            "self": false,
            "source_security_group_id": "sg-08cda0051e0b2d63b",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2124670353",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d763ccd30b2e9472",
            "self": false,
            "source_security_group_id": "sg-08cda0051e0b2d63b",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-694291066",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d763ccd30b2e9472",
            "self": false,
            "source_security_group_id": "sg-0d763ccd30b2e9472",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02eb15024787451b5",
            "network_border_group": "us-gov-west-1",
            "public_dns": "ec2-52-61-150-68.us-gov-west-1.compute.amazonaws.com",
            "public_ip": "52.61.150.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "support-vpc-us-gov-west-1a",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:internet-gateway/igw-02704e1635cba9c09",
            "id": "igw-02704e1635cba9c09",
            "owner_id": "096785701408",
            "tags": {
              "Name": "support-vpc",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared"
            },
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02eb15024787451b5",
            "id": "nat-0f43b647cb81f2192",
            "network_interface_id": "eni-039136fd1ae612649",
            "private_ip": "10.0.4.208",
            "public_ip": "52.61.150.68",
            "subnet_id": "subnet-00792dfe9247cc894",
            "tags": {
              "Name": "support-vpc-us-gov-west-1a",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d11dbc1454c9fb481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f43b647cb81f2192",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d11dbc1454c9fb48",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02704e1635cba9c09",
            "id": "r-rtb-0d7689474461a86171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7689474461a8617",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d11dbc1454c9fb48",
            "owner_id": "096785701408",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "support-vpc-private",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared"
            },
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d7689474461a8617",
            "owner_id": "096785701408",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "support-vpc-public",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared"
            },
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae7fa512474273b3",
            "route_table_id": "rtb-0d11dbc1454c9fb48",
            "subnet_id": "subnet-09156b7b6ebfb8f81"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d9d49c83a2b20c5",
            "route_table_id": "rtb-0d11dbc1454c9fb48",
            "subnet_id": "subnet-0d22deaebd6e050fd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e69091d8f939a675",
            "route_table_id": "rtb-0d11dbc1454c9fb48",
            "subnet_id": "subnet-0bf6d8be3a39db2ae"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f5a513d18c306d9",
            "route_table_id": "rtb-0d7689474461a8617",
            "subnet_id": "subnet-00792dfe9247cc894"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0862bd1d5c9a0118e",
            "route_table_id": "rtb-0d7689474461a8617",
            "subnet_id": "subnet-019f08162a8be8505"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02aeaa5225d1185d1",
            "route_table_id": "rtb-0d7689474461a8617",
            "subnet_id": "subnet-00b54f5294841cc47"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:subnet/subnet-09156b7b6ebfb8f81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09156b7b6ebfb8f81",
            "map_public_ip_on_launch": false,
            "owner_id": "096785701408",
            "tags": {
              "Name": "support-vpc-private-us-gov-west-1a",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:subnet/subnet-0d22deaebd6e050fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d22deaebd6e050fd",
            "map_public_ip_on_launch": false,
            "owner_id": "096785701408",
            "tags": {
              "Name": "support-vpc-private-us-gov-west-1b",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:subnet/subnet-0bf6d8be3a39db2ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1c",
            "availability_zone_id": "usgw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0bf6d8be3a39db2ae",
            "map_public_ip_on_launch": false,
            "owner_id": "096785701408",
            "tags": {
              "Name": "support-vpc-private-us-gov-west-1c",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:subnet/subnet-00792dfe9247cc894",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-00792dfe9247cc894",
            "map_public_ip_on_launch": true,
            "owner_id": "096785701408",
            "tags": {
              "Name": "support-vpc-public-us-gov-west-1a",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:subnet/subnet-019f08162a8be8505",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-019f08162a8be8505",
            "map_public_ip_on_launch": true,
            "owner_id": "096785701408",
            "tags": {
              "Name": "support-vpc-public-us-gov-west-1b",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:subnet/subnet-00b54f5294841cc47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1c",
            "availability_zone_id": "usgw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-00b54f5294841cc47",
            "map_public_ip_on_launch": true,
            "owner_id": "096785701408",
            "tags": {
              "Name": "support-vpc-public-us-gov-west-1c",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cd3c970dded22cb0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:096785701408:vpc/vpc-0cd3c970dded22cb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e4e3eca0fffbe7e",
            "default_route_table_id": "rtb-0fc937296f4a244d8",
            "default_security_group_id": "sg-0bfce0492e1c65131",
            "dhcp_options_id": "dopt-68b5170f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cd3c970dded22cb0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fc937296f4a244d8",
            "owner_id": "096785701408",
            "tags": {
              "Name": "support-vpc",
              "kubernetes.io/cluster/support-training-eks-vD95cRsC": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}